[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Items/orb_solar6.png" type="Texture" id=1]
[ext_resource path="res://Assets/Items/orb_solar1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Items/orb_solar2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Items/orb_solar4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Items/orb_solar3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Items/orb_solar5.png" type="Texture" id=6]
[ext_resource path="res://orb_solar.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sounds/orb.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="Animation" id=5]
resource_name = "collect"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, -10000 ) ]
}

[node name="orb_solar" type="Area2D"]
collision_layer = 128
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/collect = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="SoundCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
pitch_scale = 0.7
[connection signal="body_entered" from="." to="." method="_on_orb_solar_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
